--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "echarts": "^4.9.0",
+    "element-ui": "^2.14.1",
+    "mockjs": "^1.1.0",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.0",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
