--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-axios": "^3.2.0",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.2.0",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
